--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@mantine/core": "^8.3.2",
-    "@mantine/form": "^8.3.2",
-    "@mantine/hooks": "^8.3.2",
-    "@mantine/notifications": "^8.3.2",
+    "@mantine/charts": "^8.3.6",
+    "@mantine/core": "^8.3.6",
+    "@mantine/form": "^8.3.6",
+    "@mantine/hooks": "^8.3.6",
+    "@mantine/notifications": "^8.3.6",
     "@tabler/icons-react": "^3.34.1",
+    "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
