--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tabler/icons-react": "^3.34.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
