--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.1.8",
