--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.3.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.16",
