--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^8.3.6",
     "@mantine/hooks": "^8.3.6",
     "@mantine/notifications": "^8.3.6",
+    "@mantine/spotlight": "^8.3.6",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
