--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@mantine/hooks": "^8.3.6",
     "@mantine/notifications": "^8.3.6",
     "@mantine/spotlight": "^8.3.6",
+    "@svar-ui/core-locales": "^2.3.1",
+    "@svar-ui/gantt-locales": "^2.3.0",
+    "@svar-ui/react-core": "^2.3.1",
+    "@svar-ui/react-gantt": "^2.3.3",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
