--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@mantine/charts": "^8.3.6",
-    "@mantine/core": "^8.3.6",
-    "@mantine/form": "^8.3.6",
-    "@mantine/hooks": "^8.3.6",
-    "@mantine/notifications": "^8.3.6",
-    "@mantine/spotlight": "^8.3.6",
+    "@mantine/charts": "^8.3.7",
+    "@mantine/core": "^8.3.7",
+    "@mantine/dates": "^8.3.7",
+    "@mantine/form": "^8.3.7",
+    "@mantine/hooks": "^8.3.7",
+    "@mantine/notifications": "^8.3.7",
+    "@mantine/spotlight": "^8.3.7",
     "@svar-ui/core-locales": "^2.3.1",
     "@svar-ui/gantt-locales": "^2.3.0",
     "@svar-ui/react-core": "^2.3.1",
