--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "mantine-react-table": "^2.0.0-beta.9",
     "motion": "^12.23.24",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
