--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "motion": "^12.23.24",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.3.0",
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.16",
+    "@types/leaflet": "^1.9.21",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
