--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit"
   },
@@ -23,8 +23,8 @@
     "@svar-ui/react-gantt": "^2.3.3",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.90.7",
-      "axios": "^1.13.2",
-      "clsx": "^2.1.1",
+    "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
